fixed wrong width on large mobile

--- a/project-8/components/MainContent/Step5/step5.sass
+++ b/project-8/components/MainContent/Step5/step5.sass
@@ -228,6 +228,9 @@
             .form-item
               width: 100%
               padding: 4px 0
+
+              label.label
+                width: 100%
                   
       .chat-bubble
         width: 100%
